--- a/.github/workflows/nightly-benchmark.yml
+++ b/.github/workflows/nightly-benchmark.yml
@@ -2,7 +2,7 @@ name: Nightly Benchmark
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * 0'
   workflow_dispatch:
     inputs:
       models:
@@ -16,7 +16,7 @@ on:
 
 concurrency:
   group: nightly-benchmark
-  cancel-in-progress: true # TODO: revert before merge — enable concurrency
+  cancel-in-progress: false
 
 permissions:
   contents: read
