--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -258,41 +258,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Cache flash-attn wheel
+      - name: Setup vLLM backend
         if: matrix.setup_vllm
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip/wheels
-          key: flash-attn-${{ runner.os }}-${{ hashFiles('scripts/ci_install_vllm.sh') }}
+        uses: ./.github/actions/setup-vllm
 
-      - name: Restore TRT-LLM wheel cache
-        id: trtllm-cache
+      - name: Setup TRT-LLM backend
         if: matrix.setup_trtllm
-        uses: actions/cache/restore@v4
-        with:
-          path: /tmp/trtllm-wheel
-          key: trtllm-wheel-${{ runner.os }}-cuda13-v2
+        uses: ./.github/actions/setup-trtllm
 
-      - name: Install inference backend
-        run: |
-          bash scripts/ci_setup_python_venv.sh
-          source .venv/bin/activate
-          if [ "${{ matrix.setup_vllm }}" == "true" ]; then
-            bash scripts/ci_install_vllm.sh
-          elif [ "${{ matrix.setup_trtllm }}" == "true" ]; then
-            bash scripts/ci_install_trtllm.sh
-          else
-            bash scripts/ci_install_sglang.sh
-          fi
-
-      # Save TRT-LLM wheel immediately after build, before tests run
-      # This ensures the cache is saved even if tests fail or job is cancelled
-      - name: Save TRT-LLM wheel cache
-        if: matrix.setup_trtllm && steps.trtllm-cache.outputs.cache-hit != 'true'
-        uses: actions/cache/save@v4
-        with:
-          path: /tmp/trtllm-wheel
-          key: trtllm-wheel-${{ runner.os }}-cuda13-v2
+      - name: Setup SGLang backend
+        if: ${{ !matrix.setup_vllm && !matrix.setup_trtllm }}
+        uses: ./.github/actions/setup-sglang
 
       - name: Setup Oracle Instant Client
         if: matrix.setup_oracle
@@ -430,11 +406,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Setup Python venv and SGLang
-        run: |
-          bash scripts/ci_setup_python_venv.sh
-          source .venv/bin/activate
-          bash scripts/ci_install_sglang.sh
+      - name: Setup SGLang backend
+        uses: ./.github/actions/setup-sglang
 
       - name: Setup Go
         uses: actions/setup-go@v6
@@ -486,11 +459,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Install inference backend
-        run: |
-          bash scripts/ci_setup_python_venv.sh
-          source .venv/bin/activate
-          bash scripts/ci_install_sglang.sh
+      - name: Setup SGLang backend
+        uses: ./.github/actions/setup-sglang
 
       - name: Setup Go
         uses: actions/setup-go@v5
