--- a/.github/actions/setup-vllm/action.yml
+++ b/.github/actions/setup-vllm/action.yml
@@ -11,7 +11,7 @@ runs:
     - name: Restore pip cache
       uses: actions/cache@v4
       with:
-        path: ~/.cache/pip
+        path: ~/.cache/uv
         key: vllm-pip-${{ runner.os }}-${{ hashFiles('scripts/ci_install_vllm.sh') }}
 
     - name: Install vLLM
