--- a/.github/actions/setup-vllm/action.yml
+++ b/.github/actions/setup-vllm/action.yml
@@ -1,5 +1,5 @@
 name: 'Setup vLLM Backend'
-description: 'Create Python venv, restore pip cache, and install vLLM.'
+description: 'Create Python venv, restore/save uv cache, and install vLLM.'
 
 runs:
   using: 'composite'
@@ -8,12 +8,20 @@ runs:
       shell: bash
       run: bash scripts/ci_setup_python_venv.sh
 
-    - name: Restore pip cache
-      uses: actions/cache@v4
+    - name: Restore uv cache
+      id: uv-cache
+      uses: actions/cache/restore@v4
       with:
         path: ~/.cache/uv
-        key: vllm-pip-${{ runner.os }}-${{ hashFiles('scripts/ci_install_vllm.sh') }}
+        key: vllm-uv-${{ runner.os }}-${{ hashFiles('scripts/ci_install_vllm.sh') }}
 
     - name: Install vLLM
       shell: bash
       run: bash scripts/ci_install_vllm.sh
+
+    - name: Save uv cache
+      if: steps.uv-cache.outputs.cache-hit != 'true'
+      uses: actions/cache/save@v4
+      with:
+        path: ~/.cache/uv
+        key: vllm-uv-${{ runner.os }}-${{ hashFiles('scripts/ci_install_vllm.sh') }}
