fix(ci): use split cache restore/save for sglang
Same pattern as vllm and trtllm: save immediately after install instead
of relying on post-job cleanup.

--- a/.github/actions/setup-sglang/action.yml
+++ b/.github/actions/setup-sglang/action.yml
@@ -1,5 +1,5 @@
 name: 'Setup SGLang Backend'
-description: 'Create Python venv, restore pip cache, and install SGLang.'
+description: 'Create Python venv, restore/save pip cache, and install SGLang.'
 
 runs:
   using: 'composite'
@@ -9,7 +9,8 @@ runs:
       run: bash scripts/ci_setup_python_venv.sh
 
     - name: Restore pip cache
-      uses: actions/cache@v4
+      id: pip-cache
+      uses: actions/cache/restore@v4
       with:
         path: ~/.cache/pip
         key: sglang-pip-${{ runner.os }}-${{ hashFiles('scripts/ci_install_sglang.sh') }}
@@ -17,3 +18,10 @@ runs:
     - name: Install SGLang
       shell: bash
       run: bash scripts/ci_install_sglang.sh
+
+    - name: Save pip cache
+      if: steps.pip-cache.outputs.cache-hit != 'true'
+      uses: actions/cache/save@v4
+      with:
+        path: ~/.cache/pip
+        key: sglang-pip-${{ runner.os }}-${{ hashFiles('scripts/ci_install_sglang.sh') }}
