fix(ci): reduce docker stop grace period for CI cleanup containers
Use docker stop -t 1 for Brave MCP Server and Oracle Database cleanup
steps to avoid waiting the default 10s SIGTERM grace period on ephemeral
runners where teardown can stall for ~2 minutes.

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -368,13 +368,13 @@ jobs:
       - name: Cleanup Brave MCP Server
         if: always() && matrix.setup_brave
         run: |
-          docker stop brave-search-server || true
+          docker stop -t 1 brave-search-server || true
           docker rm brave-search-server || true
 
       - name: Cleanup Oracle Database
         if: always() && matrix.setup_oracle
         run: |
-          docker stop oracle-db || true
+          docker stop -t 1 oracle-db || true
           docker rm oracle-db || true
 
   go-unit-tests:
