--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -205,7 +205,7 @@ jobs:
             ignore_opts: ""
           - name: e2e
             timeout: 45
-            test_dirs: "e2e_test/embeddings e2e_test/router"
+            test_dirs: "e2e_test/router e2e_test/embeddings"
             extra_deps: "pytest-parallel py"  # py is required for pytest-parallel with newer pytest
             env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
             reruns: "--reruns 2 --reruns-delay 5"
