--- a/tokenizer/Cargo.toml
+++ b/tokenizer/Cargo.toml
@@ -19,6 +19,7 @@ name = "llm_tokenizer"
 [dependencies]
 anyhow.workspace = true
 blake3.workspace = true
+chrono.workspace = true
 bytemuck = { workspace = true, features = ["derive"] }
 dashmap.workspace = true
 lru.workspace = true
