chore: restore production settings after workflow testing
What changed:
- .github/workflows/nightly-benchmark.yml: Restore schedule trigger, remove
  PR trigger that was added for testing
- e2e_test/benchmarks/test_nightly_perf.py: Set _TEST_MODE back to False
  to run full benchmarks

Why:
- Workflow testing is complete, reverting to production configuration

--- a/.github/workflows/nightly-benchmark.yml
+++ b/.github/workflows/nightly-benchmark.yml
@@ -1,13 +1,8 @@
 name: Nightly Benchmark
 
 on:
-  # TODO: Uncomment after testing
-  # schedule:
-  #   - cron: '0 0 * * 0'
-  pull_request:
-    paths:
-      - '.github/workflows/nightly-benchmark.yml'
-      - 'e2e_test/benchmarks/test_nightly_perf.py'
+  schedule:
+    - cron: '0 0 * * 0'
   workflow_dispatch:
     inputs:
       models:
