--- a/protocols/Cargo.toml
+++ b/protocols/Cargo.toml
@@ -19,7 +19,7 @@ axum = ["dep:axum"]
 
 [dependencies]
 axum = { workspace = true, optional = true }
-chrono.workspace = true
+chrono = { workspace = true, features = ["serde"] }
 rand.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, features = ["preserve_order"] }
