feat(serve): add unified --connection-mode and fix gRPC health checks
- Add --connection-mode {grpc,http} argument (default: grpc)
- sglang supports both grpc and http modes
- vllm and trtllm only support grpc (error if http requested)
- Move health_check and worker_url to base WorkerLauncher class
- Add grpcio and grpcio-health-checking dependencies
- Remove unused dependencies (uvicorn, fastapi, aiohttp, orjson)
- Update README with serve command documentation

--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -29,10 +29,8 @@ classifiers = [
 
 dependencies = [
     "setproctitle",
-    "aiohttp",
-    "orjson",
-    "uvicorn",
-    "fastapi",
+    "grpcio",
+    "grpcio-health-checking",
 ]
 
 [project.optional-dependencies]
