--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -11,16 +11,13 @@ authors = [
     {name = "Chang Su", email = "mckvtl@gmail.com"},
     {name = "Keyang Ru", email = "rukeyang@gmail.com"}
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.12"
 readme = "../../README.md"
 license = { text = "Apache-2.0" }
 classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Rust",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3.14",
@@ -34,7 +31,9 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
+    "mypy",
     "requests>=2.25.0",
+    "ruff",
     "pytest>=7.0.0",
 ]
 
