refactor(protocols): use serde_with::skip_serializing_none to reduce boilerplate
Replace repetitive per-field `#[serde(skip_serializing_if = "Option::is_none")]`
annotations with the struct-level `#[serde_with::skip_serializing_none]` macro
across the protocols crate. This removes ~290 boilerplate annotations.

Only applied to types where ALL Option<T> fields already had the annotation,
ensuring zero serialization behavior changes.

--- a/protocols/Cargo.toml
+++ b/protocols/Cargo.toml
@@ -23,6 +23,7 @@ chrono.workspace = true
 rand.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, features = ["preserve_order"] }
+serde_with.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 # Only used by protocols
