--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ rand = "0.9.2"
 reqwest = { version = "0.12.8", default-features = false }
 serde = { version = "1.0" }
 serde_json = "1.0"
+serde_with = { version = "3", features = ["macros"] }
 subtle = "2.6"
 thiserror = "2.0.12"
 tokio = { version = "1.42.0" }
