chore: unify workspace dependency management and bump crate versions
- Add all internal crates to [workspace.dependencies] in root Cargo.toml
- Update all consumers to use .workspace = true pattern consistently
- Bump crate versions to reflect actual package versions:
  - openai-protocol: 1.0.0 → 1.1.0
  - reasoning-parser: 1.0.1 → 1.1.0
  - tool-parser: 1.0.0 → 1.1.0
  - llm-tokenizer: 1.0.0 → 1.1.0
  - smg-auth: 1.0.0 → 1.1.0
  - smg-mcp: 1.0.0 → 2.0.0
  - smg-data-connector: 1.0.0 → 1.1.0
  - llm-multimodal: 1.0.0 → 1.1.0
  - smg-grpc-client: 1.0.0 → 1.1.0
  - smg (model_gateway): 0.4.0 → 1.0.0
- Remove unused dependencies from multimodal crate (async-trait, tracing)

This ensures consistent dependency management across the workspace,
making version updates simpler and reducing duplication.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,20 @@ members = ["model_gateway", "protocols", "reasoning_parser", "tool_parser", "wor
 resolver = "2"
 
 [workspace.dependencies]
-openai-protocol = { version = "1.0.0", path = "protocols" }
-smg-auth = { version = "1.0.0", path = "auth" }
-smg-mcp = { version = "1.0.0", path = "mcp" }
-smg-data-connector = { version = "1.0.0", path = "data_connector", package = "data-connector" }
+# Internal workspace crates
+openai-protocol = { version = "1.1.0", path = "protocols" }
+reasoning-parser = { version = "1.1.0", path = "reasoning_parser" }
+tool-parser = { version = "1.1.0", path = "tool_parser" }
+wfaas = { version = "1.0.1", path = "workflow" }
+llm-tokenizer = { version = "1.1.0", path = "tokenizer" }
+smg-auth = { version = "1.1.0", path = "auth" }
+smg-mcp = { version = "2.0.0", path = "mcp" }
+kv-index = { version = "1.0.0", path = "kv_index" }
+smg-data-connector = { version = "1.1.0", path = "data_connector", package = "data-connector" }
+llm-multimodal = { version = "1.1.0", path = "multimodal" }
 smg-wasm = { version = "1.0.0", path = "wasm", package = "smg-wasm" }
 smg-mesh = { version = "1.0.0", path = "mesh", package = "smg-mesh" }
-smg-grpc-client = { version = "1.0.0", path = "grpc_client" }
+smg-grpc-client = { version = "1.1.0", path = "grpc_client" }
 
 # Shared dependencies
 anyhow = "1.0"
