--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -126,6 +126,7 @@ jobs:
       - name: Build Python wheel and Go FFI library
         if: steps.cache-wheel.outputs.cache-hit != 'true'
         run: |
+          rm -rf bindings/python/dist/
           bash scripts/ci_setup_python_venv.sh
           bash scripts/ci_build_wheel.sh
 
