--- a/model_gateway/Cargo.toml
+++ b/model_gateway/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "smg"
-version = "0.4.0"
+version = "1.0.0"
 edition = "2021"
 description = "High-performance model-routing gateway for large-scale LLM deployments"
 license = "Apache-2.0"
@@ -61,16 +61,16 @@ tokio = { workspace = true, features = ["full"] }
 uuid = { workspace = true, features = ["v4", "serde"] }
 
 # Workspace crates
-openai-protocol = { version = "1.0.0", path = "../protocols", features = ["axum"] }
-reasoning-parser = { version = "1.0.1", path = "../reasoning_parser" }
-tool-parser = { version = "1.0.0", path = "../tool_parser" }
-wfaas = { version = "1.0.1", path = "../workflow" }
-llm-tokenizer = { version = "1.0.0", path = "../tokenizer" }
+openai-protocol = { workspace = true, features = ["axum"] }
+reasoning-parser.workspace = true
+tool-parser.workspace = true
+wfaas.workspace = true
+llm-tokenizer.workspace = true
 smg-auth.workspace = true
 smg-mcp.workspace = true
-kv-index = { version = "1.0.0", path = "../kv_index", package = "kv-index" }
+kv-index.workspace = true
 smg-data-connector.workspace = true
-llm-multimodal = { version = "1.0.0", path = "../multimodal" }
+llm-multimodal.workspace = true
 smg-wasm.workspace = true
 smg-mesh.workspace = true
 smg-grpc-client.workspace = true
@@ -132,7 +132,7 @@ rsa = { version = "0.9", features = ["sha2"] }
 jsonwebtoken = "9.3"
 validator = "0.20.0"
 base64 = "0.22"
-kv-index = { path = "../kv_index", package = "kv-index" }
+kv-index.workspace = true
 
 [[bench]]
 name = "wasm_middleware_latency"
