--- a/multimodal/Cargo.toml
+++ b/multimodal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "llm-multimodal"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
 description = "Multimodal processing for vision and other modalities"
 license = "Apache-2.0"
@@ -16,7 +16,6 @@ categories = ["multimedia::images", "science"]
 name = "llm_multimodal"
 
 [dependencies]
-async-trait.workspace = true
 base64 = "0.22"
 bytes = { version = "1.8.0", features = ["serde"] }
 image = { version = "0.25.4", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "tiff", "webp"] }
@@ -28,12 +27,11 @@ serde_bytes = "0.11"
 serde_json.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["sync", "fs", "rt-multi-thread"] }
-tracing.workspace = true
 url = "2.5.4"
 
 # Workspace crates
-llm-tokenizer = { version = "1.0.0", path = "../tokenizer" }
-anyhow = "1.0.100"
+llm-tokenizer.workspace = true
+anyhow.workspace = true
 
 [dev-dependencies]
 npyz = { version = "0.8", features = ["npz"] }
