--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -215,15 +215,15 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - name: benchmarks
-            timeout: 20
-            test_dirs: "e2e_test/benchmarks"
-            extra_deps: "genai-bench==0.0.3"
-            env_vars: ""
-            reruns: ""
-            upload_benchmarks: true
-            parallel_opts: ""  # No parallel for benchmarks (performance measurement)
-            ignore_opts: "--ignore=e2e_test/benchmarks/test_go_bindings_perf.py --ignore=e2e_test/benchmarks/test_nightly_perf.py"  # Go and nightly benchmarks run in dedicated jobs
+          # - name: benchmarks
+          #   timeout: 20
+          #   test_dirs: "e2e_test/benchmarks"
+          #   extra_deps: "genai-bench==0.0.3"
+          #   env_vars: ""
+          #   reruns: ""
+          #   upload_benchmarks: true
+          #   parallel_opts: ""  # No parallel for benchmarks (performance measurement)
+          #   ignore_opts: "--ignore=e2e_test/benchmarks/test_go_bindings_perf.py --ignore=e2e_test/benchmarks/test_nightly_perf.py"  # Go and nightly benchmarks run in dedicated jobs
           - name: responses
             timeout: 30
             test_dirs: "e2e_test/responses"
@@ -234,56 +234,56 @@ jobs:
             setup_brave: true
             parallel_opts: ""  # Cloud backend tests not compatible with parallel execution
             ignore_opts: ""
-          - name: e2e
-            timeout: 20
-            test_dirs: "e2e_test/router e2e_test/embeddings"
-            # py is needed for pytest-parallel; sentence-transformers provides HuggingFace reference embeddings
-            extra_deps: "pytest-parallel py sentence-transformers"
-            env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
-            reruns: "--reruns 2 --reruns-delay 5"
-            parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
-            ignore_opts: ""
-          - name: chat-completions-sglang
-            timeout: 20
-            test_dirs: "e2e_test/chat_completions"
-            extra_deps: "pytest-parallel py"
-            env_vars: "E2E_RUNTIME=sglang SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
-            reruns: "--reruns 2 --reruns-delay 5"
-            parallel_opts: "--workers 1 --tests-per-worker 4"
-            test_filter: ""
-            ignore_opts: ""
-          - name: chat-completions-vllm
-            timeout: 20
-            test_dirs: "e2e_test/chat_completions"
-            extra_deps: "pytest-parallel py"
-            env_vars: "E2E_RUNTIME=vllm SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
-            reruns: "--reruns 2 --reruns-delay 5"
-            parallel_opts: "--workers 1 --tests-per-worker 4"
-            # TODO: Remove filter when vLLM supports logprobs and n>1 with greedy sampling
-            # Excludes: 5-grpc (logprobs=5), 2-None-grpc (n=2 with no logprobs), multiple_choices (n=2 tests)
-            test_filter: "-k 'not (5-grpc or 2-None-grpc or multiple_choices)'"
-            setup_vllm: true
-            ignore_opts: ""
-          - name: vllm-pd
-            timeout: 15
-            test_dirs: "e2e_test/router/test_pd_mmlu.py"
-            extra_deps: ""
-            env_vars: "E2E_RUNTIME=vllm SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
-            reruns: "--reruns 2 --reruns-delay 5"
-            parallel_opts: ""
-            test_filter: ""
-            setup_vllm: true
-            ignore_opts: ""
-          - name: chat-completions-trtllm
-            timeout: 25
-            test_dirs: "e2e_test/chat_completions"
-            extra_deps: "pytest-parallel py"
-            env_vars: "E2E_RUNTIME=trtllm SHOW_WORKER_LOGS=1 SHOW_ROUTER_LOGS=1"
-            reruns: "--reruns 2 --reruns-delay 5"
-            parallel_opts: "--workers 1 --tests-per-worker 4"
-            test_filter: ""
-            setup_trtllm: true
-            ignore_opts: ""
+          # - name: e2e
+          #   timeout: 20
+          #   test_dirs: "e2e_test/router e2e_test/embeddings"
+          #   # py is needed for pytest-parallel; sentence-transformers provides HuggingFace reference embeddings
+          #   extra_deps: "pytest-parallel py sentence-transformers"
+          #   env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+          #   reruns: "--reruns 2 --reruns-delay 5"
+          #   parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
+          #   ignore_opts: ""
+          # - name: chat-completions-sglang
+          #   timeout: 20
+          #   test_dirs: "e2e_test/chat_completions"
+          #   extra_deps: "pytest-parallel py"
+          #   env_vars: "E2E_RUNTIME=sglang SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+          #   reruns: "--reruns 2 --reruns-delay 5"
+          #   parallel_opts: "--workers 1 --tests-per-worker 4"
+          #   test_filter: ""
+          #   ignore_opts: ""
+          # - name: chat-completions-vllm
+          #   timeout: 20
+          #   test_dirs: "e2e_test/chat_completions"
+          #   extra_deps: "pytest-parallel py"
+          #   env_vars: "E2E_RUNTIME=vllm SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+          #   reruns: "--reruns 2 --reruns-delay 5"
+          #   parallel_opts: "--workers 1 --tests-per-worker 4"
+          #   # TODO: Remove filter when vLLM supports logprobs and n>1 with greedy sampling
+          #   # Excludes: 5-grpc (logprobs=5), 2-None-grpc (n=2 with no logprobs), multiple_choices (n=2 tests)
+          #   test_filter: "-k 'not (5-grpc or 2-None-grpc or multiple_choices)'"
+          #   setup_vllm: true
+          #   ignore_opts: ""
+          # - name: vllm-pd
+          #   timeout: 15
+          #   test_dirs: "e2e_test/router/test_pd_mmlu.py"
+          #   extra_deps: ""
+          #   env_vars: "E2E_RUNTIME=vllm SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+          #   reruns: "--reruns 2 --reruns-delay 5"
+          #   parallel_opts: ""
+          #   test_filter: ""
+          #   setup_vllm: true
+          #   ignore_opts: ""
+          # - name: chat-completions-trtllm
+          #   timeout: 25
+          #   test_dirs: "e2e_test/chat_completions"
+          #   extra_deps: "pytest-parallel py"
+          #   env_vars: "E2E_RUNTIME=trtllm SHOW_WORKER_LOGS=1 SHOW_ROUTER_LOGS=1"
+          #   reruns: "--reruns 2 --reruns-delay 5"
+          #   parallel_opts: "--workers 1 --tests-per-worker 4"
+          #   test_filter: ""
+          #   setup_trtllm: true
+          #   ignore_opts: ""
     runs-on: k8s-runner-gpu
     timeout-minutes: ${{ matrix.timeout }}
     steps:
@@ -305,7 +305,7 @@ jobs:
       - name: Setup Oracle Instant Client
         if: matrix.setup_oracle
         run: |
-          sudo apt-get install -y unzip wget libaio1
+          sudo apt-get install -y unzip wget
           INSTANT_CLIENT_DIR="$HOME/instant-client"
           INSTANT_CLIENT_ZIP="instantclient-basic-linux.x64-23.9.0.25.07.zip"
 
@@ -365,6 +365,9 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           XAI_API_KEY: ${{ secrets.XAI_API_KEY }}
         run: |
+          echo "LD_LIBRARY_PATH=$LD_LIBRARY_PATH"
+          ls -la $HOME/instant-client/instantclient_23_9/ 2>/dev/null || echo "Oracle Instant Client directory not found"
+          ldconfig -p | grep libaio || echo "libaio not found in ldconfig"
           bash scripts/ci_killall_sglang.sh "nuk_gpus"
           ${{ matrix.env_vars }} ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" pytest ${{ matrix.reruns }} ${{ matrix.parallel_opts }} ${{ matrix.ignore_opts }} ${{ matrix.test_dirs }} ${{ matrix.test_filter }} -s -vv -o log_cli=true --log-cli-level=INFO
 
