--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -417,11 +417,11 @@ jobs:
 
       - name: Cleanup Brave MCP Server
         if: always() && matrix.setup_brave
-        run: docker rm -f brave-search-server || true
+        run: docker kill brave-search-server || true; docker rm brave-search-server || true
 
       - name: Cleanup Oracle Database
         if: always() && matrix.setup_oracle
-        run: docker rm -f oracle-db || true
+        run: docker kill oracle-db || true; docker rm oracle-db || true
 
   go-unit-tests:
     name: go-unit-tests
