--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -308,22 +308,29 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y unzip wget
           sudo apt-get install -y libaio1t64 || sudo apt-get install -y libaio1
-          sudo ldconfig
+          # Copy libaio into Instant Client dir so it's on LD_LIBRARY_PATH
+          LIBAIO_PATH=$(find /usr/lib -name "libaio.so*" -type f 2>/dev/null | head -1)
           INSTANT_CLIENT_DIR="$HOME/instant-client"
-          INSTANT_CLIENT_ZIP="instantclient-basic-linux.x64-23.9.0.25.07.zip"
+          INSTANT_CLIENT_ZIP="instantclient-basic-linux.x64-23.26.1.0.0.zip"
 
-          if [ ! -d "$INSTANT_CLIENT_DIR/instantclient_23_9" ]; then
+          if [ ! -d "$INSTANT_CLIENT_DIR/instantclient_23_26" ]; then
             echo "Downloading Oracle Instant Client..."
             mkdir -p "$INSTANT_CLIENT_DIR"
             cd "$INSTANT_CLIENT_DIR"
-            wget https://download.oracle.com/otn_software/linux/instantclient/2390000/$INSTANT_CLIENT_ZIP
+            wget https://download.oracle.com/otn_software/linux/instantclient/2326100/$INSTANT_CLIENT_ZIP
             unzip $INSTANT_CLIENT_ZIP
             rm $INSTANT_CLIENT_ZIP
           else
             echo "Oracle Instant Client already exists, skipping download"
           fi
 
-          echo "LD_LIBRARY_PATH=$HOME/instant-client/instantclient_23_9:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+          # Ensure libaio.so.1 is findable via LD_LIBRARY_PATH
+          if [ -n "$LIBAIO_PATH" ]; then
+            cp "$LIBAIO_PATH" "$INSTANT_CLIENT_DIR/instantclient_23_26/"
+            ln -sf "$INSTANT_CLIENT_DIR/instantclient_23_26/$(basename $LIBAIO_PATH)" "$INSTANT_CLIENT_DIR/instantclient_23_26/libaio.so.1"
+          fi
+
+          echo "LD_LIBRARY_PATH=$HOME/instant-client/instantclient_23_26:$LD_LIBRARY_PATH" >> $GITHUB_ENV
 
       - name: Start Oracle Database
         if: matrix.setup_oracle
